--- a/deal/WebContent/bootstrap/index.html
+++ b/deal/WebContent/bootstrap/index.html
@@ -148,13 +148,13 @@
 				<li>
 					<a href="ajax/dashboard.html" class="active ajax-link">
 						<i class="fa fa-dashboard"></i>
-						<span class="hidden-xs">Dashboard</span>
+						<span class="hidden-xs">의류/잡화</span>
 					</a>
 				</li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-bar-chart-o"></i>
-						<span class="hidden-xs">Charts</span>
+						<span class="hidden-xs">뷰티</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="ajax/charts_xcharts.html">xCharts</a></li>
@@ -167,7 +167,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-table"></i>
-						 <span class="hidden-xs">Tables</span>
+						 <span class="hidden-xs">식품</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="ajax/tables_simple.html">Simple Tables</a></li>
@@ -178,7 +178,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-pencil-square-o"></i>
-						 <span class="hidden-xs">Forms</span>
+						 <span class="hidden-xs">가구/생활</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="ajax/forms_elements.html">Elements</a></li>
@@ -189,7 +189,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-desktop"></i>
-						 <span class="hidden-xs">UI Elements</span>
+						 <span class="hidden-xs">레저/자동차</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="ajax/ui_grid.html">Grid</a></li>
@@ -202,7 +202,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-list"></i>
-						 <span class="hidden-xs">Pages</span>
+						 <span class="hidden-xs">디지털/가전</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a href="ajax/page_login.html">Login</a></li>
@@ -221,7 +221,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-map-marker"></i>
-						<span class="hidden-xs">Maps</span>
+						<span class="hidden-xs">도서/취미</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="ajax/maps.html">OpenStreetMap</a></li>
@@ -231,7 +231,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-picture-o"></i>
-						 <span class="hidden-xs">Gallery</span>
+						 <span class="hidden-xs">지역</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="ajax/gallery_simple.html">Simple Gallery</a></li>
