바뀐 템플릿

--- a/deal/WebContent/production/index.html
+++ b/deal/WebContent/production/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentallela Alela! | </title>
+    <title>Dealer Chic | </title>
 
     <!-- Bootstrap core CSS -->
 
@@ -53,7 +53,7 @@
                 <div class="left_col scroll-view">
 
                     <div class="navbar nav_title" style="border: 0;">
-                        <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentellela Alela!</span></a>
+                        <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Dealer Chic!</span></a>
                     </div>
                     <div class="clearfix"></div>
 
@@ -77,7 +77,7 @@
                         <div class="menu_section">
                             <h3>General</h3>
                             <ul class="nav side-menu">
-                                <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-home"></i> 의류/잡화 <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="index.html">Dashboard</a>
                                         </li>
@@ -87,7 +87,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-edit"></i> 뷰티 <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="form.html">General Form</a>
                                         </li>
@@ -103,7 +103,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-desktop"></i> 식품/유아동 <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="general_elements.html">General Elements</a>
                                         </li>
@@ -125,7 +125,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-table"></i> 가구/생활 <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="tables.html">Tables</a>
                                         </li>
@@ -133,7 +133,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-bar-chart-o"></i> 레저/자동차 <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="chartjs.html">Chart JS</a>
                                         </li>
@@ -147,12 +147,36 @@
                                         </li>
                                     </ul>
                                 </li>
+                                <li><a><i class="fa fa-table"></i>디지털/가전 <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu" style="display: none">
+                                        <li><a href="tables.html">Tables</a>
+                                        </li>
+                                        <li><a href="tables_dynamic.html">Table Dynamic</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li><a><i class="fa fa-table"></i> 도서/취미 <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu" style="display: none">
+                                        <li><a href="tables.html">Tables</a>
+                                        </li>
+                                        <li><a href="tables_dynamic.html">Table Dynamic</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li><a><i class="fa fa-table"></i> 지역(실시간 딜정보) <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu" style="display: none">
+                                        <li><a href="tables.html">Tables</a>
+                                        </li>
+                                        <li><a href="tables_dynamic.html">Table Dynamic</a>
+                                        </li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                         <div class="menu_section">
                             <h3>Live On</h3>
                             <ul class="nav side-menu">
-                                <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-bug"></i> 자유게시판 <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="e_commerce.html">E-commerce</a>
                                         </li>
@@ -166,7 +190,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-windows"></i> 가격흥정 <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="page_404.html">404 Error</a>
                                         </li>
